--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,6 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.12</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -32,7 +31,12 @@
     <dependency>
     	<groupId>org.springframework.boot</groupId>
     	<artifactId>spring-boot-starter-freemarker</artifactId>
-    </dependency>
+    </dependency>  
+    <dependency>
+	    <groupId>xml-apis</groupId>
+	    <artifactId>xmlParserAPIs</artifactId>
+	    <version>2.0.2</version>
+	</dependency>  
   </dependencies>
   <parent>
   	<groupId>org.springframework.boot</groupId>
