--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,12 @@
 	    <groupId>xml-apis</groupId>
 	    <artifactId>xmlParserAPIs</artifactId>
 	    <version>2.0.2</version>
-	</dependency>  
+	</dependency> 
+	<dependency>
+		<groupId>org.jsoup</groupId>
+		<artifactId>jsoup</artifactId>
+		<version>1.7.1</version>
+  	</dependency>
   </dependencies>
   <parent>
   	<groupId>org.springframework.boot</groupId>
